--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,18 @@
 asgiref==3.7.2
 certifi==2023.11.17
+charset-normalizer==3.3.2
 distlib==0.3.8
 Django==5.0.1
 django-cors-headers==4.3.1
+django-rest-framework==0.1.0
 djangorestframework==3.14.0
 filelock==3.13.1
+idna==3.6
 numpy==1.26.3
 pbr==6.0.0
 platformdirs==4.1.0
 pytz==2023.3.post1
+requests==2.31.0
 sqlparse==0.4.4
 stevedore==5.1.0
+
